name:                c0
version:             0.1.0.0
synopsis:            C0 compiler
description:         C0 compiler
author:              Nome
maintainer:          email@domínio
category:            Language
build-type:          Simple
cabal-version:       >=1.10
                     
executable c0
  main-is:             Main.hs
  other-modules:       Lexer, Parser, AST, CodeInter, CodeMachi
  build-tools:         alex, happy
  build-depends:       base, array, containers, mtl
  hs-source-dirs:      src
  default-language:    Haskell2010
